@@ -37,10 +37,10 @@ public class ForwardingBridgeTest extends NetworkTestSupport {
     private ForwardingBridge bridge;
 
     public void initCombosForTestForwardMessageCompressed() {
-        addCombinationValues("deliveryMode", new Object[] {new Integer(DeliveryMode.NON_PERSISTENT),
-                                                           new Integer(DeliveryMode.PERSISTENT)});
-        addCombinationValues("destinationType", new Object[] {new Byte(ActiveMQDestination.QUEUE_TYPE),
-                                                              new Byte(ActiveMQDestination.TOPIC_TYPE)});
+        addCombinationValues("deliveryMode", new Object[] {Integer.valueOf(DeliveryMode.NON_PERSISTENT),
+                                                           Integer.valueOf(DeliveryMode.PERSISTENT)});
+        addCombinationValues("destinationType", new Object[] {Byte.valueOf(ActiveMQDestination.QUEUE_TYPE),
+                                                              Byte.valueOf(ActiveMQDestination.TOPIC_TYPE)});
     }
 
     public void testForwardMessageCompressed() throws Exception {
@@ -87,10 +87,10 @@ public class ForwardingBridgeTest extends NetworkTestSupport {
     }
 
     public void initCombosForTestAddConsumerThenSend() {
-        addCombinationValues("deliveryMode", new Object[] {new Integer(DeliveryMode.NON_PERSISTENT),
-                                                           new Integer(DeliveryMode.PERSISTENT)});
-        addCombinationValues("destinationType", new Object[] {new Byte(ActiveMQDestination.QUEUE_TYPE),
-                                                              new Byte(ActiveMQDestination.TOPIC_TYPE)});
+        addCombinationValues("deliveryMode", new Object[] {Integer.valueOf(DeliveryMode.NON_PERSISTENT),
+                                                           Integer.valueOf(DeliveryMode.PERSISTENT)});
+        addCombinationValues("destinationType", new Object[] {Byte.valueOf(ActiveMQDestination.QUEUE_TYPE),
+                                                              Byte.valueOf(ActiveMQDestination.TOPIC_TYPE)});
     }
 
     public void testAddConsumerThenSend() throws Exception {
